--- a/frontend/src/pages/modals/index.css
+++ b/frontend/src/pages/modals/index.css
@@ -6,6 +6,10 @@
     max-width: 95%;
     width: auto;
   }
+  .modal-dialog-custom-xllx {
+    max-width: 55%;
+    width: auto;
+  }
   .modal-dialog-custom-xlll {
     max-width: 75%;
     width: auto;
