--- a/frontend/src/home/index.css
+++ b/frontend/src/home/index.css
@@ -18,6 +18,32 @@
   z-index: 10;
 }
 
+/* พื้นฐาน */
+/* .sidebar-hover {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  border-radius: 8px;
+  transition: all 0.9s ease;
+} */
+
+/* เมื่อเอาเมาส์วาง */
+/* .sidebar-hover:hover {
+  background-color: #cacaca; 
+  transform: translateX(3px);
+} */
+
+/* ไอคอน */
+/* .sidebar-hover:hover svg {
+  color: #ffffff !important;
+} */
+
+/* ข้อความ */
+/* .sidebar-hover:hover p {
+  color: #ffffff !important;
+} */
+
+
 #navbar-mm{
     background-color: rgb(255, 234, 0);
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5); /* ✅ เงาเข้มชัด */
@@ -25,8 +51,8 @@
 #clock-header{
     background-color: aliceblue;
     padding: 0.4rem;
-    box-shadow: 1px 1px 3px 2px rgb(67, 67, 67);
-    border-radius: 1px;
+    /* box-shadow: 1px 1px 3px 2px rgb(67, 67, 67); */
+    border-radius: 3px;
 }
 .img-list{
     border-radius: 5px;
@@ -34,6 +60,10 @@
 }
 #sidebar-pro{
   background-color: #e8e8e8;
+}
+
+#image-icon{
+  color: #303030;
 }
 
 /*----- login ----------------------------------------------------- */
